updated build scripts

--- a/utils/BUILD
+++ b/utils/BUILD
@@ -1,25 +1,18 @@
-load("@rules_cc//cc:defs.bzl", "cc_library")
+load("//:defs.bzl", "we_library", "we_test")
 
-cc_library(
+we_library(
     name = "defer",
     hdrs = ["defer.h"],
-    copts = ["-std=c17", "-pedantic"]
 )
 
-cc_library(
+we_library(
     name = "error",
     srcs = ["error.c"],
     hdrs = ["error.h"],
-    copts = ["-std=c17", "-pedantic"]
 )
 
-cc_test(
-    name = "defer_test",
-    size = "small",
-    srcs = ["test.c"],
-    copts = ["-std=gnu17", "-pedantic", "-Wno-strict-prototypes"],
-    deps = [
-        ":error",
-        "@snow//:snow",
-    ],
+we_test(
+    name = "error_test",
+    srcs = ["error_test.c"],
+    deps = [":error"],
 )
