switched to Mozilla formatting

--- a/src/utils/BUILD
+++ b/src/utils/BUILD
@@ -25,11 +25,17 @@ we_test(
 )
 
 we_library(
+    name = "test",
+    hdrs = ["test.h"],
+)
+
+we_library(
     name = "utils",
     hdrs = ["utils.h"],
     visibility = ["//src:__subpackages__"],
     deps = [
         ":defer",
         ":error",
+        ":test",
     ],
 )
