--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,4 +1,6 @@
-module(name = "wednesday", version = "0.1")
+module(
+    name = "wednesday",
+    version = "0.1",
+)
 
 bazel_dep(name = "rules_cc", version = "0.1.0")
-
