--- a/.github/workflows/bazel.yml
+++ b/.github/workflows/bazel.yml
@@ -7,9 +7,12 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  bazel:
 
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest]
 
     steps:
     - uses: actions/checkout@v4
